<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.peakaboo</groupId>
		<artifactId>peakaboo</artifactId>
		<version>5.6-SNAPSHOT</version>
	</parent>
	<artifactId>peakaboo-swing</artifactId>
	<packaging>jar</packaging>

	<name>peakaboo-swing</name>
	<url>http://maven.apache.org</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<dependencies>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.peakaboo.framework</groupId>
			<artifactId>autodialog-swing</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.peakaboo.framework</groupId>
			<artifactId>stratus</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.peakaboo.framework</groupId>
			<artifactId>plural-swing</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.peakaboo.framework</groupId>
			<artifactId>cyclops-swing</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache-extras.beanshell</groupId>
			<artifactId>bsh</artifactId>
			<version>2.0b6</version>
		</dependency>
		<dependency>
			<groupId>org.peakaboo</groupId>
			<artifactId>libpeakaboo</artifactId>
			<version>${project.version}</version>
		</dependency>
		<dependency>
			<groupId>com.bugsnag</groupId>
			<version>[3.0,4.0)</version>
			<artifactId>bugsnag</artifactId>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>17</source>
					<target>17</target>
				</configuration>
			</plugin>
			<plugin>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<outputDirectory>
						${project.basedir}/../
					</outputDirectory>
					<finalName>Peakaboo-${project.version}</finalName>
					<appendAssemblyId>false</appendAssemblyId>
					<archive>
						<manifest>
							<mainClass>org.peakaboo.ui.swing.Peakaboo</mainClass>
						</manifest>
						<manifestEntries>
							<Add-Opens>java.base/java.lang java.base/java.math java.base/java.util java.base/java.util.concurrent java.base/java.net java.base/java.text</Add-Opens>
						</manifestEntries>
					</archive>
					<descriptorRefs>
						<descriptorRef>jar-with-dependencies</descriptorRef>
					</descriptorRefs>

				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id> <!-- this is used for inheritance merges -->
						<phase>package</phase> <!-- bind to the packaging phase -->
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>

</project>
